--- a/index.html
+++ b/index.html
@@ -27,6 +27,29 @@
             </div>
           </nav>
     </header>
+    <div class="container">
+      <div class="row">
+        <section class="col-lg-3">
+          
+          <div class="collapse navbar-collapse d-md-block" id="navbarText">
+            <h2 class="card">" DEV Community 👩&zwj;💻👨&zwj;💻 is a community of 1,001,744 amazing developers "</h2>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+            </ul>
+          </div>
+        </section>
+        <section class="col-12 col-lg-5"></section>
+        <section class="col-lg-4"></section>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
 </body>
 </html>
