--- a/index.html
+++ b/index.html
@@ -432,6 +432,7 @@
           </aside>
         </div>
       </section>
+
       <!--Roberto-->
       <section class="col-12 col-lg-5">
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
@@ -547,9 +548,199 @@
           </div>
 
           <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab"
-            tabindex="0">Prueba 2</div>
+            tabindex="0">
+            Prueba 2
+            <div class="card mb-3">
+              <img
+                src="https://res.cloudinary.com/practicaldev/image/fetch/s--9K4yKpNh--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/ulm0rczxyxh5wpga7idy.png"
+                class="card-img-top" alt="...">
+              <div class="card-body d-flex">
+                <div>
+                  <img alt=""
+                    src="https://res.cloudinary.com/practicaldev/image/fetch/s--gTD4eAzH--/c_fill,f_auto,fl_progressive,h_90,q_auto,w_90/https://dev-to-uploads.s3.amazonaws.com/uploads/user/profile_image/766163/78e71423-3f2d-4931-a4aa-97bb7da51dbf.JPG"
+                    class="rounded-circle crayons-logo__image" loading="lazy">
+                </div>
+                <div class="ps-3">
+                  <p><small class="text-muted">Erin Bensinger for The DEV Team</small></p>
+                  <a href="#" style="text-decoration:none">
+                    <h3 class="card-title">🛣O Guia Definitivo para Rotas com React Router</h3>
+                  </a>
+
+                  <div class="d-inline-flex flex-column">
+                    <div class="btn-group btn-group-sm" role="group" aria-label="Small button group">
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">#react</button>
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">#javascript</button>
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">#webdev</button>
+                    </div>
+                    <div class="btn-group btn-group-sm" role="group" aria-label="Small button group">
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img"
+                          aria-hidden="true" class="crayons-icon">
+                          <path
+                            d="M21.179 12.794l.013.014L12 22l-9.192-9.192.013-.014A6.5 6.5 0 0112 3.64a6.5 6.5 0 019.179 9.154zM4.575 5.383a4.5 4.5 0 000 6.364L12 19.172l7.425-7.425a4.5 4.5 0 10-6.364-6.364L8.818 9.626 7.404 8.21l3.162-3.162a4.5 4.5 0 00-5.99.334l-.001.001z">
+                          </path>
+                        </svg>
+                        1 reaction
+                      </button>
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img"
+                          aria-hidden="true" class="crayons-icon">
+                          <path
+                            d="M10 3h4a8 8 0 010 16v3.5c-5-2-12-5-12-11.5a8 8 0 018-8zm2 14h2a6 6 0 000-12h-4a6 6 0 00-6 6c0 3.61 2.462 5.966 8 8.48V17z">
+                          </path>
+                        </svg>
+                        Add Comment
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card mb-3">
+              <!--img src="https://res.cloudinary.com/practicaldev/image/fetch/s--X6n1VV1x--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/fcm8zcg4n5oin7zd62nl.png"
+                        class="card-img-top" alt="..."-->
+              <div class="card-body d-flex">
+                <div>
+                  <img alt="The DEV Team logo"
+                    src="https://res.cloudinary.com/practicaldev/image/fetch/s--VG4G50pa--/c_fill,f_auto,fl_progressive,h_90,q_auto,w_90/https://dev-to-uploads.s3.amazonaws.com/uploads/user/profile_image/494502/2d4eb07b-a07a-46f9-91cd-1b98d862a13c.png"
+                    class="crayons-logo__image rounded-circle" loading="lazy">
+                </div>
+                <div class="ps-3">
+                  <p><small class="text-muted">Erin Bensinger</small></p>
+                  <a href="#" style="text-decoration:none">
+                    <h4 class="card-title">Netlify Acquires GatsbyJS</h4>
+                  </a>
+
+                  <div class="d-inline-flex flex-column">
+                    <div class="btn-group btn-group-sm" role="group" aria-label="Small button group">
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">#devdiscuss</button>
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">#career</button>
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">#beginners</button>
+                    </div>
+                    <div class="btn-group btn-group-sm" role="group" aria-label="Small button group">
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img"
+                          aria-hidden="true" class="crayons-icon">
+                          <path
+                            d="M21.179 12.794l.013.014L12 22l-9.192-9.192.013-.014A6.5 6.5 0 0112 3.64a6.5 6.5 0 019.179 9.154zM4.575 5.383a4.5 4.5 0 000 6.364L12 19.172l7.425-7.425a4.5 4.5 0 10-6.364-6.364L8.818 9.626 7.404 8.21l3.162-3.162a4.5 4.5 0 00-5.99.334l-.001.001z">
+                          </path>
+                        </svg>
+                        18 reactions
+                      </button>
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img"
+                          aria-hidden="true" class="crayons-icon">
+                          <path
+                            d="M10 3h4a8 8 0 010 16v3.5c-5-2-12-5-12-11.5a8 8 0 018-8zm2 14h2a6 6 0 000-12h-4a6 6 0 00-6 6c0 3.61 2.462 5.966 8 8.48V17z">
+                          </path>
+                        </svg>
+                        18 comments
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          
+          </div>
           <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab"
-            tabindex="0">Prueba 3</div>
+            tabindex="0">
+            Prueba 3
+            <div class="card mb-3">
+              <img
+                src="https://res.cloudinary.com/practicaldev/image/fetch/s--x5TIXS6B--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/jxc9uzhsads1z932whnz.jpg"
+                class="card-img-top" alt="...">
+              <div class="card-body d-flex">
+                <div>
+                  <img alt=""
+                    src="https://res.cloudinary.com/practicaldev/image/fetch/s--DjLjzFe---/c_fill,f_auto,fl_progressive,h_90,q_auto,w_90/https://dev-to-uploads.s3.amazonaws.com/uploads/user/profile_image/690302/0f9dbf48-bfa8-4ebc-8b41-a9071516dd86.png"
+                    class="crayons-logo__image" loading="lazy">
+                </div>
+                <div class="ps-3">
+                  <p><small class="text-muted">
+                    Ram Maheshwari ⚡</small></p>
+                  <a href="#" style="text-decoration:none">
+                    <h4 class="card-title">20 Killer JavaScript One-Liners That’ll Save You Hours of Coding 🤯🔥</h4>
+                  </a>
+
+                  <div class="d-inline-flex flex-column">
+                    <div class="btn-group btn-group-sm" role="group" aria-label="Small button group">
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">#devdiscuss</button>
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">#career</button>
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">#beginners</button>
+                    </div>
+                    <div class="btn-group btn-group-sm" role="group" aria-label="Small button group">
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img"
+                          aria-hidden="true" class="crayons-icon">
+                          <path
+                            d="M21.179 12.794l.013.014L12 22l-9.192-9.192.013-.014A6.5 6.5 0 0112 3.64a6.5 6.5 0 019.179 9.154zM4.575 5.383a4.5 4.5 0 000 6.364L12 19.172l7.425-7.425a4.5 4.5 0 10-6.364-6.364L8.818 9.626 7.404 8.21l3.162-3.162a4.5 4.5 0 00-5.99.334l-.001.001z">
+                          </path>
+                        </svg>
+                        18 reactions
+                      </button>
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img"
+                          aria-hidden="true" class="crayons-icon">
+                          <path
+                            d="M10 3h4a8 8 0 010 16v3.5c-5-2-12-5-12-11.5a8 8 0 018-8zm2 14h2a6 6 0 000-12h-4a6 6 0 00-6 6c0 3.61 2.462 5.966 8 8.48V17z">
+                          </path>
+                        </svg>
+                        18 comments
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card mb-3">
+              <!--img src="https://res.cloudinary.com/practicaldev/image/fetch/s--X6n1VV1x--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/fcm8zcg4n5oin7zd62nl.png"
+                        class="card-img-top" alt="..."-->
+              <div class="card-body d-flex">
+                <div>
+                  <img alt="The DEV Team logo"
+                    src="https://res.cloudinary.com/practicaldev/image/fetch/s--VG4G50pa--/c_fill,f_auto,fl_progressive,h_90,q_auto,w_90/https://dev-to-uploads.s3.amazonaws.com/uploads/user/profile_image/494502/2d4eb07b-a07a-46f9-91cd-1b98d862a13c.png"
+                    class="crayons-logo__image rounded-circle" loading="lazy">
+                </div>
+                <div class="ps-3">
+                  <p><small class="text-muted">Erin Bensinger</small></p>
+                  <a href="#" style="text-decoration:none">
+                    <h4 class="card-title">Netlify Acquires GatsbyJS</h4>
+                  </a>
+
+                  <div class="d-inline-flex flex-column">
+                    <div class="btn-group btn-group-sm" role="group" aria-label="Small button group">
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">#devdiscuss</button>
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">#career</button>
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">#beginners</button>
+                    </div>
+                    <div class="btn-group btn-group-sm" role="group" aria-label="Small button group">
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img"
+                          aria-hidden="true" class="crayons-icon">
+                          <path
+                            d="M21.179 12.794l.013.014L12 22l-9.192-9.192.013-.014A6.5 6.5 0 0112 3.64a6.5 6.5 0 019.179 9.154zM4.575 5.383a4.5 4.5 0 000 6.364L12 19.172l7.425-7.425a4.5 4.5 0 10-6.364-6.364L8.818 9.626 7.404 8.21l3.162-3.162a4.5 4.5 0 00-5.99.334l-.001.001z">
+                          </path>
+                        </svg>
+                        18 reactions
+                      </button>
+                      <button type="button" class="rounded border border-0 btn btn-outline-dark">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img"
+                          aria-hidden="true" class="crayons-icon">
+                          <path
+                            d="M10 3h4a8 8 0 010 16v3.5c-5-2-12-5-12-11.5a8 8 0 018-8zm2 14h2a6 6 0 000-12h-4a6 6 0 00-6 6c0 3.61 2.462 5.966 8 8.48V17z">
+                          </path>
+                        </svg>
+                        18 comments
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>          
+          </div>
         </div>
       </section>
       <section class="col-lg-4"></section>
