--- a/index.html
+++ b/index.html
@@ -552,7 +552,93 @@
             tabindex="0">Prueba 3</div>
         </div>
       </section>
-      <section class="col-lg-4"></section>
+      <!-- Ivan / Aside derecho -->
+      <section class="col-lg-4 d-none d-lg-block">
+        <div class="card">
+          <img
+            src="https://res.cloudinary.com/practicaldev/image/fetch/s--Qnexldaj--/c_limit,f_auto,fl_progressive,q_auto,w_500/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/7brex760nh4niita1b8j.jpg"
+            alt="linde">
+          <div class="card-body">
+            <h5 class="card-title">Linode + DEV Hackathon (7)</h5>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Linode + DEV Hackathon</li>
+              <li class="list-group-item">Linode + DEV Hackathon</li>
+              <li class="list-group-item">Announcing the Linode + DEV Hackathon</li>
+              <li class="list-group-item">Community Discussion Thread - Linode + DEV Hackathon</li>
+              <li class="list-group-item">Unique Project Ideas for the Linode + DEV Hackathon</li>
+            </ul>
+            <div class="d-block p-2">
+            <a href="#" class="btn btn-primary">Share your project</a>
+            <a href="#" class="btn btn-light">See all posts</a>
+          </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Listings</h5>
+            <div class="container">
+              <div class="col">
+                <div class="row">&#127384 Help Neede for Low-code Project in Node.js <p>collabs</p>
+                </div>
+                <div class="row">Mobile developer for hire <p>forhire</p>
+                </div>
+                <div class="row">Cyber Security Competition "VU Cyberthon 2023" <p>events</p>
+                </div>
+                <div class="row">Need elite engineering talent for hire? <p>forhire</p>
+                </div>
+                <div class="row">Product Focused Principal Front End <p>for hire</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">#help</h5>
+            <div class="container">
+              <div class="col">Need help with the following error...!</div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">#discuss</h5>
+            <div class="container">
+              <div class="col">
+                <div class="row">Meme Monday 👁<p>89 comments</p>
+                </div>
+                <div class="row">Girls Rule the World, Why Not Tech?</div>
+                <div class="row">[question] Could security ever be considered a true part of software quality?</div>
+                <div class="row">What Web Framework to Follow in 2023?</div>
+                <div class="row">5 years of *professional* coding (OR how I earn money while having fun) <p>1 comment
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">#explainlikeimfive</h5>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">#challenge</h5>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">#meta</h5>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">#watercooler</h5>
+          </div>
+        </div>
+
+      </section>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
