feat:finish left aside

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </header>
   <div class="container mt-4">
     <div class="row">
-      <section class="col-10 col-lg-3">
+      <section class="col-7 col-lg-3">
 
         <div class="collapse navbar-collapse d-md-block" id="navbarText">
           <aside class="container lft">
@@ -67,8 +67,8 @@
                 <h5 class="card-title">DEV Community 👩&zwj;💻👨&zwj;💻 is a community of 1,001,744 amazing developers
                 </h5>
                 <p class="card-text">We're a place where coders share, stay up-to-date and grow their careers.</p>
-                <button class="bl-prp-brd">Create account</button>
-                <button class="border border-0">Log in</button>
+                <button class="bl-prp-brd log">Create account</button>
+                <button class="border border-0 log">Log in</button>
               </div>
             </div>
             <ul class="navbar-nav mb-2 mb-lg-4">
@@ -429,7 +429,7 @@
               <a class="social" href="instagram"><i class="fa-brands fa-instagram fa-xl"></i></a>
               <a class="social" href="twitch"><i class="fa-brands fa-twitch fa-xl"></i></a>
             </div>
-            <h5>Popular Tags</h5>
+            <h5 class="d-none d-md-block">Popular Tags</h5>
             <div class="overflow-y-auto d-none d-md-block mb-4" style="max-height: 42vh;">
               <ul>
                 <li class="ht"><a class="pt" href="">#javascript</a></li>
@@ -464,12 +464,19 @@
                 <li class="ht"><a class="pt" href="">#machinelearning</a></li>
               </ul>
             </div>
-            <div class="card">
+            <div class="card mb-4 d-none d-md-block">
               <div class="card-body">
                 <h6>Nearly 700 developers have contributed to the Forem codebase that powers DEV and other communities. 🤯</h6>
                 <h4>Thank you!</h4>
               </div>
             </div>
+            <div class="card d-none d-md-block" style="width: 15rem;">
+                <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--vf_P4FwD--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_350/https://p32.f1.n0.cdn.getcloudapp.com/items/OAu6mnD1/20ada628-9434-4772-a8e0-7d861713d3c4.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h4>The Forem Shop is Here!</h4>
+                  <a class="ul-not" href="#">>> Shop Forem, DEV, and CodeNewbie merch</a>
+                </div>
+              </div>
           </aside>
         </div>
       </section>
