--- a/index.html
+++ b/index.html
@@ -518,9 +518,10 @@
           <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab"
             tabindex="0">
             <div class="card mb-3">
+              <a href="index1.html">
               <img
                 src="https://res.cloudinary.com/practicaldev/image/fetch/s--X6n1VV1x--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/fcm8zcg4n5oin7zd62nl.png"
-                class="card-img-top" alt="...">
+                class="card-img-top" alt="..."></a>
               <div class="card-body d-flex">
                 <div>
                   <img alt="The DEV Team logo"
