--- a/index1.html
+++ b/index1.html
@@ -16,7 +16,7 @@
 
 <body class="bg-body-secondary">
   <header>
-    <nav class="navbar navbar-expand-lg bg-white">
+    <nav class="navbar navbar-expand-lg bg-white fixed-top">
       <div class="container-fluid flex-nowrap">
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -41,15 +41,136 @@
         </div>
       </div>
   </header>
+
+  <!--COntenido-->
   <div class="container">
     <div class="row">
-        <section class="col-12 col-md-1"></section>
-        <section class="col-12 col-md-8"></section>
-        <section class="col-12 col-md-3"></section>
+      <section class="col-12 col-md-1">
+        <div class="mt-5 pt-5 position-fixed">
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img"
+              aria-hidden="true" class="crayons-icon">
+              <path
+                d="M21.179 12.794l.013.014L12 22l-9.192-9.192.013-.014A6.5 6.5 0 0112 3.64a6.5 6.5 0 019.179 9.154zM4.575 5.383a4.5 4.5 0 000 6.364L12 19.172l7.425-7.425a4.5 4.5 0 10-6.364-6.364L8.818 9.626 7.404 8.21l3.162-3.162a4.5 4.5 0 00-5.99.334l-.001.001z">
+              </path>
+            </svg>
+            <p>65</p>
+          </div>
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img"
+              aria-hidden="true" class="crayons-icon">
+              <path
+                d="M10 3h4a8 8 0 010 16v3.5c-5-2-12-5-12-11.5a8 8 0 018-8zm2 14h2a6 6 0 000-12h-4a6 6 0 00-6 6c0 3.61 2.462 5.966 8 8.48V17z">
+              </path>
+            </svg>
+            <p>10</p>
+          </div>
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img"
+              aria-hidden="true" class="crayons-icon">
+              <path
+                d="M5 2h14a1 1 0 011 1v19.143a.5.5 0 01-.766.424L12 18.03l-7.234 4.536A.5.5 0 014 22.143V3a1 1 0 011-1zm13 2H6v15.432l6-3.761 6 3.761V4z">
+              </path>
+            </svg>
+            <p>70</p>
+          </div>
+          <button id="article-show-more-button" aria-controls="article-show-more-dropdown" aria-expanded="false"
+            aria-haspopup="true" class="dropbtn crayons-btn crayons-btn--ghost-dimmed crayons-btn--icon-rounded"
+            aria-label="Share post options" data-initialized="true">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" role="img"
+              aria-labelledby="a7i5y1vuh7vz8y3a9oasvvjmhvlnep6d" aria-hidden="true" class="crayons-icon dropdown-icon">
+              <title id="a7i5y1vuh7vz8y3a9oasvvjmhvlnep6d">More...</title>
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M7 12a2 2 0 11-4 0 2 2 0 014 0zm7 0a2 2 0 11-4 0 2 2 0 014 0zm5 2a2 2 0 100-4 2 2 0 000 4z"></path>
+            </svg>
+
+          </button>
+        </div>
+      </section>
+      <section class="col-12 col-md-8">
+        <div class="card mt-5">
+          <img
+            src="https://res.cloudinary.com/practicaldev/image/fetch/s--X6n1VV1x--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/fcm8zcg4n5oin7zd62nl.png"
+            class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title">#DevDiscuss: to Specialize or to Generalize?</h1>
+            <div class="d-inline-flex flex-column">
+              <div class="btn-group btn-group-sm" role="group" aria-label="Small button group">
+                <button type="button" class="rounded border border-0 btn btn-outline-dark">#devdiscuss</button>
+                <button type="button" class="rounded border border-0 btn btn-outline-dark">#career</button>
+                <button type="button" class="rounded border border-0 btn btn-outline-dark">#beginners</button>
+              </div>
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet facilis fugiat nostrum at consequuntur
+              aliquam officia. Officiis cumque error consequatur necessitatibus est sint, quis et ullam, nisi molestias
+              in vero.
+              Dolores esse tempora vel recusandae, voluptate minima quaerat eveniet aut quas iusto, odit nostrum
+              exercitationem molestiae sunt modi suscipit debitis ad delectus quod, consequatur officiis maiores
+              laudantium ratione optio! Beatae?
+              Sunt optio quas natus officia perspiciatis tempore impedit quae dolore, et harum unde? Sapiente,
+              necessitatibus minus corrupti praesentium explicabo ut ratione perferendis omnis facilis quisquam dolorem
+              aspernatur quia maiores mollitia!
+              Ratione quos dolore sit repellendus debitis! Nisi facilis obcaecati totam vel aspernatur sunt fugiat vero
+              voluptatum repudiandae, incidunt culpa adipisci iusto ex corrupti rem velit commodi quod fuga? Laborum,
+              vero.
+              Quasi consectetur reiciendis debitis maxime, cumque explicabo illum harum doloremque earum nesciunt?
+              Perspiciatis tenetur repellendus error itaque a quia deserunt aliquid porro delectus suscipit soluta,
+              assumenda consectetur enim hic dolor.
+              Non illo saepe tempora voluptate. Fuga, rerum maiores velit sunt quam illo earum eius nisi qui, numquam
+              molestias? Sed neque, praesentium quaerat saepe vero consectetur! Animi ad libero atque quo!
+              Repudiandae ipsam magnam minus quia consequuntur ullam incidunt fugit pariatur, obcaecati porro, eius ipsa
+              quaerat assumenda modi dicta asperiores ratione repellat, iusto iure ut! At sapiente praesentium sed
+              assumenda expedita!
+              Excepturi magnam nostrum eos aspernatur corporis suscipit sed repellendus impedit voluptas, voluptatem
+              dicta itaque doloremque nesciunt! Mollitia velit dolor consequuntur quas reiciendis inventore facilis
+              distinctio dolore eum, provident quidem obcaecati.
+              Sapiente assumenda impedit et error, ex minima, quaerat accusamus earum quo natus eos aperiam non sed,
+              incidunt quae quos! Velit excepturi a ullam minus enim beatae explicabo id repellendus dolores.
+              Delectus tempore, maiores consequatur perspiciatis molestiae quibusdam molestias officiis ab nobis quia
+              aspernatur quas dolorem nam in maxime fuga quis doloremque excepturi corrupti, iste obcaecati. Sapiente
+              sed fugiat molestias temporibus?
+            </p>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet facilis fugiat nostrum at consequuntur
+              aliquam officia. Officiis cumque error consequatur necessitatibus est sint, quis et ullam, nisi molestias
+              in vero.
+              Dolores esse tempora vel recusandae, voluptate minima quaerat eveniet aut quas iusto, odit nostrum
+              exercitationem molestiae sunt modi suscipit debitis ad delectus quod, consequatur officiis maiores
+              laudantium ratione optio! Beatae?
+              Sunt optio quas natus officia perspiciatis tempore impedit quae dolore, et harum unde? Sapiente,
+              necessitatibus minus corrupti praesentium explicabo ut ratione perferendis omnis facilis quisquam dolorem
+              aspernatur quia maiores mollitia!
+              Ratione quos dolore sit repellendus debitis! Nisi facilis obcaecati totam vel aspernatur sunt fugiat vero
+              voluptatum repudiandae, incidunt culpa adipisci iusto ex corrupti rem velit commodi quod fuga? Laborum,
+              vero.
+              Quasi consectetur reiciendis debitis maxime, cumque explicabo illum harum doloremque earum nesciunt?
+              Perspiciatis tenetur repellendus error itaque a quia deserunt aliquid porro delectus suscipit soluta,
+              assumenda consectetur enim hic dolor.
+              Non illo saepe tempora voluptate. Fuga, rerum maiores velit sunt quam illo earum eius nisi qui, numquam
+              molestias? Sed neque, praesentium quaerat saepe vero consectetur! Animi ad libero atque quo!
+              Repudiandae ipsam magnam minus quia consequuntur ullam incidunt fugit pariatur, obcaecati porro, eius ipsa
+              quaerat assumenda modi dicta asperiores ratione repellat, iusto iure ut! At sapiente praesentium sed
+              assumenda expedita!
+              Excepturi magnam nostrum eos aspernatur corporis suscipit sed repellendus impedit voluptas, voluptatem
+              dicta itaque doloremque nesciunt! Mollitia velit dolor consequuntur quas reiciendis inventore facilis
+              distinctio dolore eum, provident quidem obcaecati.
+              Sapiente assumenda impedit et error, ex minima, quaerat accusamus earum quo natus eos aperiam non sed,
+              incidunt quae quos! Velit excepturi a ullam minus enim beatae explicabo id repellendus dolores.
+              Delectus tempore, maiores consequatur perspiciatis molestiae quibusdam molestias officiis ab nobis quia
+              aspernatur quas dolorem nam in maxime fuga quis doloremque excepturi corrupti, iste obcaecati. Sapiente
+              sed fugiat molestias temporibus?
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="col-12 col-md-3">
+
+      </section>
     </div>
   </div>
-  <footer></footer>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-  crossorigin="anonymous"></script>
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </body>
