--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@
     <nav class="navbar bg-white">
       <div class="container-fluid flex-nowrap">
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+        <button class="navbar-toggler ham" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
           aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button><div class="collapse navbar-collapse" id="navbarText">
