feat:add rigth aside

--- a/index1.html
+++ b/index1.html
@@ -460,7 +460,7 @@
             <p>70</p>
           </div>
           <button id="article-show-more-button" aria-controls="article-show-more-dropdown" aria-expanded="false"
-            aria-haspopup="true" class="dropbtn crayons-btn crayons-btn--ghost-dimmed crayons-btn--icon-rounded"
+            aria-haspopup="true" class="dropbtn crayons-btn crayons-btn--ghost-dimmed crayons-btn--icon-rounded border border-0"
             aria-label="Share post options" data-initialized="true">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" role="img"
               aria-labelledby="a7i5y1vuh7vz8y3a9oasvvjmhvlnep6d" aria-hidden="true" class="crayons-icon dropdown-icon">
@@ -550,7 +550,35 @@
         </div>
       </section>
       <section class="col-12 col-md-3">
-
+        <div class="card mt-5 position-relative">
+            <div class="card-header pink" style="height: 2rem;"></div>
+            <div class="card-body">
+                <img alt="The DEV Team logo"
+                src="https://res.cloudinary.com/practicaldev/image/fetch/s--mbsgKaXh--/c_fill,f_auto,fl_progressive,h_90,q_auto,w_90/https://dev-to-uploads.s3.amazonaws.com/uploads/organization/profile_image/1/0213bbaa-d5a1-4d25-9e7a-10c30b455af0.png"
+                class="crayons-logo__image position-absolute" loading="lazy" style="top: 15px;">
+                <h5 class="card-title mb-3">Erin Bensinger for The DEV Team</h5>
+                <button class="bl-prp-bg border border-0 rounded">Follow</button>
+                <p class="card-text mt-3">I'm 25 y.o. Expert Web/App Design & Development with 7+ years of experience. Work with the best API Tester team. Love my 🐕 Muffin and banana ice cream. Practice running and yoga in my spare time.</p>
+                <ul class="p-0">
+                    <li class="ht">
+                        <div>LOCATION</div>
+                        <div>Toronto, Ontario, Canada</div>
+                    </li>
+                    <li class="ht mt-3">
+                        <div>EDUCATION</div>
+                        <div>University of Toronto, Data Analytics</div>
+                    </li>
+                    <li class="ht mt-5">
+                        <div>WORK</div>
+                        <div>API Tester team member</div>
+                    </li>
+                    <li class="ht mt-3">
+                        <div>JOINED</div>
+                        <div>22 ago 2022</div>
+                    </li>
+                </ul>
+            </div>
+        </div>
       </section>
     </div>
   </div>
