--- a/index1.html
+++ b/index1.html
@@ -169,7 +169,42 @@
       </section>
     </div>
   </div>
-  
+
+  <footer class="d-flex flex-column mt-3">
+    <div class="d-flex justify-content-center">
+      <a href="#">DEV Community 👩‍💻👨‍💻</a>
+       <p>A constructive and inclusive social network for software developers. With you every step of your journey.</p> 
+    </div>
+    <div class="d-flex justify-content-center">
+      <ul class="d-flex flex-row ms-5">
+        <li class="p-2">Home</li>
+        <li class="p-2">Listings</li>
+        <li class="p-2">Podcast</li>
+        <li class="p-2">Videos</li>
+        <li class="p-2">Tags</li>
+        <li class="p-2">FAQ</li>
+        <li class="p-2">Forem Shop</li>
+        <li class="p-2">Sponsors</li>
+        <li class="p-2">About</li>
+        <li class="p-2">Contact</li>
+        <li class="p-2">Guides</li>
+        <li class="p-2">Software comparisons</li>
+      </ul>
+    </div>
+    <div class="d-flex justify-content-center">
+      <ul class="d-flex flex-row ms-5">
+        <li class="p-2">Code of Conduct</li>
+        <li class="p-2">Privacy Policy</li>
+        <li class="p-2">Terms of use</li>
+      </ul>
+    </div>
+    <div class="d-flex justify-content-center">
+      <p>Built on Forem — the open source software that powers DEV and other inclusive communities.</p>
+    </div>
+    <div class="d-flex justify-content-center">
+      <p>Made with love and Ruby on Rails. DEV Community 👩‍💻👨‍💻 © 2016 - 2023.</p>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
