--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body class="bg-body-secondary">
   <header>
-    <nav class="navbar navbar-expand-lg bg-white">
+    <nav class="navbar bg-white fixed-top">
       <div class="container-fluid flex-nowrap">
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -43,7 +43,7 @@
   </header>
   <div class="container mt-4">
     <div class="row">
-      <section class="col-7 col-lg-3">
+      <section class="col-7 col-lg-3 pt-5">
 
         <div class="collapse navbar-collapse d-md-block" id="navbarText">
           <aside class="container lft">
@@ -62,7 +62,7 @@
                 </svg>
               </button>
             </header>
-            <div class="card">
+            <div class="card mt-2">
               <div class="card-body">
                 <h5 class="card-title">DEV Community 👩&zwj;💻👨&zwj;💻 is a community of 1,001,744 amazing developers
                 </h5>
@@ -482,7 +482,7 @@
       </section>
 
       <!--Roberto-->
-      <section class="col-12 col-lg-5">
+      <section class="col-12 col-lg-5 p-5">
         <div class="d-flex">
           <div class="me-auto">
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
@@ -818,8 +818,8 @@
       </section>
       <!-- Ivan / Aside derecho -->
       <!-- Revisar alineación -->
-      <section class="col-lg-4 d-none d-lg-block">
-        <div class="card mb-3">
+      <section class="col-lg-4 d-none d-lg-block pt-5">
+        <div class="card mb-3 mt-2">
           <img
             src="https://res.cloudinary.com/practicaldev/image/fetch/s--Qnexldaj--/c_limit,f_auto,fl_progressive,q_auto,w_500/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/7brex760nh4niita1b8j.jpg"
             alt="linde">
