--- a/index1.html
+++ b/index1.html
@@ -16,7 +16,7 @@
 
 <body class="bg-body-secondary">
   <header>
-    <nav class="navbar bg-white">
+    <nav class="navbar bg-white fixed-top">
       <div class="container-fluid flex-nowrap">
 
         <button class="navbar-toggler ham" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -430,8 +430,8 @@
   <!--COntenido-->
   <div class="container">
     <div class="row">
-      <section class="col-12 col-md-1">
-        <div class="mt-5 pt-5 position-fixed">
+      <section class="col-12 col-md-1 sticky-top">
+        <div class="mt-5 pt-5" style="top: 95px;position: sticky;">
           <div>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" role="img"
               aria-hidden="true" class="crayons-icon">
@@ -459,20 +459,15 @@
             </svg>
             <p>70</p>
           </div>
-          <button id="article-show-more-button" aria-controls="article-show-more-dropdown" aria-expanded="false"
-            aria-haspopup="true" class="dropbtn crayons-btn crayons-btn--ghost-dimmed crayons-btn--icon-rounded border border-0"
-            aria-label="Share post options" data-initialized="true">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" role="img"
               aria-labelledby="a7i5y1vuh7vz8y3a9oasvvjmhvlnep6d" aria-hidden="true" class="crayons-icon dropdown-icon">
               <title id="a7i5y1vuh7vz8y3a9oasvvjmhvlnep6d">More...</title>
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M7 12a2 2 0 11-4 0 2 2 0 014 0zm7 0a2 2 0 11-4 0 2 2 0 014 0zm5 2a2 2 0 100-4 2 2 0 000 4z"></path>
             </svg>
-
-          </button>
         </div>
       </section>
-      <section class="col-12 col-md-8">
+      <section class="col-12 col-md-8 pt-5">
         <div class="card mt-5">
           <img
             src="https://res.cloudinary.com/practicaldev/image/fetch/s--X6n1VV1x--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/fcm8zcg4n5oin7zd62nl.png"
@@ -549,8 +544,8 @@
           </div>
         </div>
       </section>
-      <section class="col-12 col-md-3">
-        <div class="card mt-5 position-relative">
+      <section class="col-12 col-md-3 pt-5">
+        <div class="card mt-5" style="top: 95px;position: sticky;">
             <div class="card-header pink" style="height: 2rem;"></div>
             <div class="card-body">
                 <img alt="The DEV Team logo"
@@ -583,39 +578,39 @@
     </div>
   </div>
 
-  <footer class="d-flex flex-column mt-3">
-    <div class="d-flex justify-content-center">
-      <a href="#">DEV Community 👩‍💻👨‍💻</a>
-       <p>A constructive and inclusive social network for software developers. With you every step of your journey.</p> 
-    </div>
-    <div class="d-flex justify-content-center">
-      <ul class="d-flex flex-row ms-5">
-        <li class="p-2">Home</li>
-        <li class="p-2">Listings</li>
-        <li class="p-2">Podcast</li>
-        <li class="p-2">Videos</li>
-        <li class="p-2">Tags</li>
-        <li class="p-2">FAQ</li>
-        <li class="p-2">Forem Shop</li>
-        <li class="p-2">Sponsors</li>
-        <li class="p-2">About</li>
-        <li class="p-2">Contact</li>
-        <li class="p-2">Guides</li>
-        <li class="p-2">Software comparisons</li>
+  <footer class="col-12 d-flex flex-column mt-3 p-5 back-f" style="height: 65vh;">
+    <div class="container text-center">
+      
+       <p><a href="#">DEV Community 👩‍💻👨‍💻</a>A constructive and inclusive social network for software developers. With you every step of your journey.</p> 
+
+
+      <ul class="d-flex justify-content-center flex-wrap p-0">
+        <li class="d-flex align-items-center mx-3">Home</li>
+        <li class="d-flex align-items-center mx-3">Listings</li>
+        <li class="d-flex align-items-center mx-3">Podcast</li>
+        <li class="d-flex align-items-center mx-3">Videos</li>
+        <li class="d-flex align-items-center mx-3">Tags</li>
+        <li class="d-flex align-items-center mx-3">FAQ</li>
+        <li class="d-flex align-items-center mx-3">Forem Shop</li>
+        <li class="d-flex align-items-center mx-3">About</li>
+        <li class="d-flex align-items-center mx-3">Contact</li>
+        <li class="d-flex align-items-center mx-3">Guides</li>
+        <li class="d-flex align-items-center mx-3">Software comparisons</li>
       </ul>
-    </div>
-    <div class="d-flex justify-content-center">
-      <ul class="d-flex flex-row ms-5">
-        <li class="p-2">Code of Conduct</li>
-        <li class="p-2">Privacy Policy</li>
-        <li class="p-2">Terms of use</li>
+
+
+      <ul class="d-flex justify-content-center flex-wrap p-0">
+        <li class="d-flex align-items-center mx-3">Code of Conduct</li>
+        <li class="d-flex align-items-center mx-3">Privacy Policy</li>
+        <li class="d-flex align-items-center mx-3">Terms of use</li>
       </ul>
-    </div>
-    <div class="d-flex justify-content-center">
+
+    <div class="fs-6">
       <p>Built on Forem — the open source software that powers DEV and other inclusive communities.</p>
-    </div>
-    <div class="d-flex justify-content-center">
+
+
       <p>Made with love and Ruby on Rails. DEV Community 👩‍💻👨‍💻 © 2016 - 2023.</p>
+    </div>
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
