--- a/index1.html
+++ b/index1.html
@@ -16,7 +16,7 @@
 
 <body class="bg-body-secondary">
   <header>
-    <nav class="navbar bg-white">
+    <nav class="navbar bg-white fixed-top">
       <div class="container-fluid flex-nowrap">
 
         <button class="navbar-toggler ham" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
